# blk-reader

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: iterate_blocks.rs  read_genesis.rs
src/: error.rs  index.rs  iterator.rs  lib.rs  reader.rs  varint.rs
tests/: integration.rs
